# macos-installation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  restore.py
brew/: Brewfile
docs/: commands.md
scripts/: generate-docs.py
src/macos_installation/: main.py  main.pyi
src/macos_installation/classes/: baseitem.py  data.py  data.pyi  zip.py  zip.pyi
src/macos_installation/cli/: __init__.py  __init__.pyi  backup.py  backup.pyi  decorators.py  decorators.pyi  decrypt.py  decrypt.pyi  encrypt.py  encrypt.pyi  print_backup_locations.py  print_backup_locations.pyi  restore.py  restore.pyi
src/macos_installation/cli_commands/: __init__.py  backup.py  restore.py
src/macos_installation/config/: __init__.py  __init__.pyi
src/macos_installation/functions/: compression.py  encryption.py  encryption.pyi  template.py  template.pyi  util.py  util.pyi
src/macos_installation/templates/: .gitconfig
src/macos_installation/templates/ssh/: config
templates/: .gitconfig
tests/: __init__.py  test_cli_runner.py  test_compression.py  test_encryption.py  test_template.py  test_util.py
