[tool.poetry]
name = "macos-installation"
version = "0.1.0"
description = ""
authors = ["Scott Crooks <scott.crooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
